# llm-zoomcamp-2026

./: .gitignore  pyproject.toml
homework/hw2-vector-search/: .gitignore  hw2_vector_search.ipynb  hw2_vector_search.ipynb.ipynb  main.py  pyproject.toml
notebooks/: hw1_agentic_rag.ipynb
